# multidustry

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix
.direnv/: flake-profile-2-link
apiserver/: Cargo.toml
apiserver/src/: lib.rs  main.rs
apiserver/src/api/v1/: mod.rs
apiserver/src/api/v1/get/: worlds.rs
apiserver/src/api/v1/kv/: mod.rs  set.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/seqbin/: Cargo.toml
crates/seqbin_derive/: Cargo.toml
crates/seqbin_derive/src/: lib.rs
docs/adr/: 001-rust-as-primary-language.md  002-why-hybrid-deploy.ru.md  template.md
gameserver/: Cargo.toml
gameserver/src/: lib.rs  main.rs
labs/runtime-linking/: Cargo.toml
monolith/: Cargo.toml
monolith/src/: main.rs
muductl/: Cargo.toml
muductl/src/: commands.rs  config_model.rs  main.rs  utils.rs
muductl/src/get/: worlds.rs
muductl/src/kv/: set.rs
multidustry-kv/: Cargo.toml
multidustry-kv/src/: consul.rs  lib.rs  sled.rs
multidustry-macro/: Cargo.toml
multidustry-transport/: Cargo.toml  README.md
multidustry-transport/src/: error_strategy.rs  guarantees.rs  inproc.rs  lib.rs  net.rs  transport_builder.rs
multidustry-transport/tests/: inproc.rs
multidustrycli/: Cargo.toml
multidustrycore/: Cargo.toml
multidustrycore/src/: kv.rs  lib.rs  observ.rs  registry.rs
multidustrycore/src/api/v1/models/get/: mod.rs  worlds.rs
multidustrycore/src/api/v1/models/kv/: set.rs
proxy/: Cargo.toml
proxy/src/: lib.rs  main.rs  packet.rs  tcp_handler.rs  udp_handler.rs
proxy/src/protocol/: mod.rs  networkio.rs  ping_resp.rs  typeio.rs
proxy/src/protocol/networkio/: string.rs
proxy/src/protocol/typeio/: string.rs
shared/src/: lib.rs  main.rs  seq_bin.rs
wit/: logging.wit  worldplugin.wit
