[package]
name = "multidustry-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bon = "3.8.1"
bytes = "1.10.1"
ciborium = "0.2.2"
dashmap = "6.1.0"
kanal = "0.1.1"
quinn = "0.10"
rcgen = "0.14.5"
rustls = "0.23.32"
serde = "1.0.228"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
