[package]
name = "multidustrycore"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.21.3"
thiserror = "2.0.15"
tracing = "0.1.41"
opentelemetry = "0.30.0"
opentelemetry-appender-tracing = "0.30.1"
opentelemetry-otlp = "0.30.0"
opentelemetry_sdk = "0.30.0"
anyhow = "1.0.100"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
pyroscope = "0.5.8"
pyroscope_pprofrs = "0.2.10"
