[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
multidustrycore = { path = "../multidustrycore" }
tokio = { version = "1.47.1", features = ["full"] }
num_cpus = "1.16"
bytes = "1.10"
uuid = { version = "1.18.0", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
lz4_flex = "0.11.5"
thiserror = "2.0.16"
